Add encryption password and update to DHIS2 2.39.1

--- a/config/dhis.conf
+++ b/config/dhis.conf
@@ -17,3 +17,5 @@ connection.password = ${POSTGRES_PASSWORD}
 
 # Enable token authentication
 enable.api_token.authentication = on
+
+encryption.password = ${ENCRYPTION_PASSWORD}
