--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 name: dhis2-setup
 services:
   dhis2_db: # Use a recent tag from https://hub.docker.com/r/postgis/postgis/tags
@@ -20,9 +19,14 @@ services:
       options:
         max-size: "50m"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-dhis2}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   dhis2_app: # Use a recent tag from https://hub.docker.com/r/dhis2/core/tags
-    image: dhis2/core:2.40.3.0
+    image: dhis2/core:2.40.3.2
     volumes:
       - ./config/dhis.conf:/opt/dhis2/dhis.conf:ro
       - ./logs/dhis2:/opt/dhis2/logs
@@ -39,7 +43,8 @@ services:
       JAVA_OPTS: "-Xms7500m -Xmx7500m -XX:PermSize=2048m -XX:MaxPermSize=2048m"
       CATALINA_OPTS: "-Dcontext.path="
     depends_on:
-      - dhis2_db
+      dhis2_db:
+        condition: service_healthy
     logging:
       driver: "json-file"
       options:
@@ -47,6 +52,11 @@ services:
     restart: unless-stopped
     ports:
       - "${APP_HOST_PORT:-8080}:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-ILf", "http://localhost:${APP_HOST_PORT:-8080}"]
+      interval: 5s
+      timeout: 5s
+      retries: 30
 
   dhis2_gateway: # Use a recent tag from https://hub.docker.com/r/jwilder/nginx-proxy/tags
     image: "jwilder/nginx-proxy:alpine"
@@ -56,6 +66,15 @@ services:
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./.apps:/data/apps:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    depends_on:
+      dhis2_app:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-ILf", "http://localhost:${GATEWAY_HOST_PORT:-8888}"]
+      interval: 5s
+      timeout: 5s
+      retries: 30
+
 
 volumes:
   db:
